--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase-admin": "^13.4.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
+    "socket.io": "^4.8.1",
     "stripe": "^18.3.0"
   }
 }
